--- a/maps.html
+++ b/maps.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <style media="screen">
+      li{
+        list-style-type: none;
+      }
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/app.css">
@@ -52,6 +57,26 @@
           <div class="col">
             <h1>API Google Maps (JQuery)</h1>
             <p>Geolocalitzar la situació geogràfica dels autors en un mapa de Google Maps.</p>
+            <div class="row">
+            <div id="googleMap" class="col-md-8"></div>
+            <div class="col-md-3"><ul id="links">
+              <strong>Jonathan Swift</strong>
+         		<li><i class="fas fa-smile"></i>&nbsp&nbsp<a id="Dublin">Naixement</a></li>
+            <li><i class="fas fa-frown"></i>&nbsp&nbsp<a id="Dublin">Defunció </a></li>
+            <hr>
+            <strong>Lord Dunsany</strong>
+            <li><i class="fas fa-smile"></i>&nbsp&nbsp<a id="Londres">Naixement</a></li>
+            <li><i class="fas fa-frown"></i>&nbsp&nbsp<a id="Dublin">Defunció </a></li>
+            <hr>
+            <strong>Herbert George Wells</strong>
+            <li><i class="fas fa-smile"></i>&nbsp&nbsp<a id="Brombley">Naixement</a></li>
+            <li><i class="fas fa-frown"></i>&nbsp&nbsp<a id="Regent's Park">Defunció </a></li>
+            <hr>
+            <strong>Edgar Rice Burroughs</strong>
+            <li><i class="fas fa-smile"></i>&nbsp&nbsp<a id="Chicago">Naixement</a></li>
+            <li><i class="fas fa-frown"></i>&nbsp&nbsp<a id="Encino">Defunció </a></li>
+            </ul></div>
+          </div>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -108,4 +133,44 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
+  <script>
+  $(document).ready(function(){
+    var marker;
+    var geocoder = new google.maps.Geocoder();
+    var myLatLng = new google.maps.LatLng(33.4936111, -117.1475);
+    var mapOptions = {zoom: 8, center: myLatLng, mapTypeId: google.maps.MapTypeId.ROADMAP}
+    var map = new google.maps.Map($("#googleMap").get(0), mapOptions);
+
+    $("#links a").click(function() {
+      var address = $(this).attr("id");
+      var missatge =$(this).text();
+      if (marker) { marker.setMap(null); }
+      geocoder.geocode({address: address}, function(results) {
+          marker = new google.maps.Marker({
+            position: results[0].geometry.location,
+            map: map
+          });
+        var infoWindow = new google.maps.InfoWindow({
+
+          content: missatge+" <h3>" + address + "</h3>"}
+          );
+          infoWindow.open(map, marker);
+        });
+    });
+  });
+
+
+
+  /*Coordenades de GoogleMaps
+  function myMap() {
+    var mapProp= {
+        center:new google.maps.LatLng(40.709428, 0.581794),//afegim les coordenades de google maps
+        zoom:16,//El zoom que tindra (de 0 a 20)
+    };
+
+    var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+    }*/
+  </script>
+  <!--Utilitzem aquest enllaç afegint la nostra key per a la api de google maps-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD22JjjDA82NwFx97KQ-6p0ZM8rsEI23PM&callback=myMap"></script>
 </html>
