--- a/flickr.html
+++ b/flickr.html
@@ -113,7 +113,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
 $(document).ready(function(){
-    var url = "http://api.flickr.com/services/feeds/photos_public.gne?format=json&jsoncallback=?&tags=scifi&tagmode=all";
+    var url = "https://api.flickr.com/services/feeds/photos_public.gne?format=json&jsoncallback=?&tags=scifi&tagmode=all";
 
     $.getJSON(url, function(data){
       var html = "";
